@@ -1,0 +1,39 @@
+[interface]
+classification = utility
+
+[parameters]
+
+[input]
+$;INPUT_FILE$; = 
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+
+[component]
+$;COMPONENT_NAME$; = download_tag
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$; = $Revision: 5801$
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$;=
