@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+		<name>download_tag computer</name>
+		<command>
+			<type>RunUnixCommand</type>
+			<name>download_tag</name>
+			<state>incomplete</state>
+			<executable>/opt/vappio-py/vappio/cli/downloadTag.py</executable>
+			<args>--block</args>			
+			<param>
+				<key>stdout</key>
+				<value>$;OUTPUT_DIRECTORY$;/$;ITERATOR_NAME$;/g$;GROUP_NUMBER$;/$;I_FILE_BASE$;.stdout</value>
+			</param>			
+			<param>
+				<key>stderr</key>
+				<value>$;OUTPUT_DIRECTORY$;/$;ITERATOR_NAME$;/g$;GROUP_NUMBER$;/$;I_FILE_BASE$;.stderr</value>
+			</param>
+			<param>
+				<key>--tag_name</key>
+				<value>$;I_FILE_BASE$;</value>			
+			</param>
+			<param>
+				<key>--src-cluster</key>
+				<value>$;CLUSTER_NAME$;</value>
+			</param>	
+		</command>
+	</commandSet>
+</commandSetRoot>
